@@ -1,7 +1,7 @@
 /* -*- C++ -*- */
 //=============================================================================
 /**
- *  @file   Consumer
+ *  @file   Consumer.h
  *
  *  $Id$
  *
