@@ -1,7 +1,7 @@
 /* -*- C++ -*- */
 //=============================================================================
 /**
- *  @file   Counting_Consumer
+ *  @file   Counting_Consumer.h
  *
  *  $Id$
  *
