@@ -1,7 +1,7 @@
 /* -*- C++ -*- */
 //=============================================================================
 /**
- *  @file   Driver
+ *  @file   Driver.h
  *
  *  $Id$
  *
