@@ -1,7 +1,7 @@
 /* -*- C++ -*- */
 //=============================================================================
 /**
- *  @file   Supplier
+ *  @file   Supplier.h
  *
  *  $Id$
  *
